Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30354

Optimizer trace does not escape double quotes, produces invalid JSON

    XMLWordPrintable

Details

    • Unexpected results

    Description

      SET optimizer_trace= 'enabled=on';
      SELECT LENGTH("a");
      SELECT json_valid(trace), trace FROM information_schema.optimizer_trace;
      

      10.4 f97f6955

      json_valid(trace)	trace
      0	{
        "steps": [
          {
            "join_preparation": {
              "select_id": 1,
              "steps": [
                {
                  "expanded_query": "select octet_length('a') AS `LENGTH("a")`"
                }
              ]
            }
          },
          {
            "join_optimization": {
              "select_id": 1,
              "steps": []
            }
          },
          {
            "join_execution": {
              "select_id": 1,
              "steps": []
            }
          }
        ]
      }
      

      Attachments

        Issue Links

          Activity

            People

              bsrikanth Srikanth Bondalapati
              elenst Elena Stepanova
              Srikanth Bondalapati Srikanth Bondalapati
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0.5d
                  0.5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h 8m Time Not Required
                  1h 8m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.