MDEV-30354 Fix JSON escaping in optimizer trace

The expanded_query field in optimizer trace could produce invalid JSON when
queries contained special characters. Use json_escape() to properly handle
quotes, backslashes and other special characters in the output.
If json_escape() fails, emit an error message in the expanded_query.

Example:
Before: "expanded_query": "select length('a') AS `LENGTH("a")`"
After:  "expanded_query": "select length('a') AS `LENGTH(\"a\")`"

The output is now properly escaped and valid JSON while maintaining
readability.

Added test cases to mysql-test/main/opt_trace.test to verify the fix.

All new code of the whole pull request, including one or several files
that are either new files or modified ones, are contributed under the
BSD-new license