sql/item_jsonfunc.h
@@ -48,6 +48,7 @@ void report_json_error_ex(const char *js, json_engine_t *je,
                           const char *fname, int n_param,
                           Sql_condition::enum_warning_level lv);
 bool check_overlaps(json_engine_t *js, json_engine_t *value, bool compare_whole);
+int st_append_escaped(String *s, const String *a);
 int json_find_overlap_with_object(json_engine_t *js,
                                               json_engine_t *value,
                                               bool compare_whole);
